# dataflower-redis

./: CHANGELOG.md  LICENSE  README.md  dataflower-redis.cabal  stack.yaml
app/: Main.hs
src/Net/Redis/: Protocol.hs  Server.hs
test/Net/Redis/: ProtocolSpec.hs
