cabal-version:       2.2

name:                dataflower-redis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dataflower-redis#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Net.Redis.Protocol
                     , Net.Redis.Server
  build-depends:       base >= 4.7 && < 5
                     , dataflower >= 0.5.0.0
                     , bytestring
                     , attoparsec
                     , vector
                     , stm
                     , containers
                     , network
                     , unix
                     , Glob
                     , utf8-string
                     , text
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable dataflower-redis
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , dataflower
                     , dataflower-redis
                     , network
                     , stm
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite dataflower-redis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.String.StripSpec
  build-depends:       base
                     , bytestring
                     , containers
                     , dataflower-redis
                     , hspec
                     , QuickCheck
                     , attoparsec
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/dataflower-redis
